--- a/apps/iperf_demo/pic32wm_bz6_curiosity.X/mcc-manifest-autosave.yml
+++ b/apps/iperf_demo/pic32wm_bz6_curiosity.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: iperf_demo
-creation_date: 2025-04-21T16:03:09.398-07:00[America/Phoenix]
+creation_date: 2025-05-01T15:30:27.947-07:00[America/Phoenix]
 operating_system: Windows 11
 mcc_mode: IDE
 mcc_mode_version: v6.25
@@ -18,10 +18,10 @@ device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name:
     V3, version: 1.5.4}
 packs: {name: PIC32CX-BZ6_DFP, version: 1.2.17}
 modules:
-- {name: csp, type: HARMONY, version: v3.22.0}
+- {name: csp, type: HARMONY, version: v3.22.2}
 - {name: core, type: HARMONY, version: v3.15.1}
 - {name: CMSIS_5, type: HARMONY, version: 5.9.0}
 - {name: wolfssl, type: HARMONY, version: v5.4.0}
-- {name: net, type: HARMONY, version: dev_aa}
+- {name: net, type: HARMONY, version: v3.14.0}
 - {name: bsp, type: HARMONY, version: v3.22.0}
 - {name: crypto, type: HARMONY, version: v3.8.2}
