--- a/apps/tcpip_udp_client/pic32wm_bz6_curiosity.X/mcc-manifest-autosave.yml
+++ b/apps/tcpip_udp_client/pic32wm_bz6_curiosity.X/mcc-manifest-autosave.yml
@@ -2,7 +2,7 @@
 
 manifest_file_version: 1.0.0
 project: tcpip_udp_client
-creation_date: 2025-04-22T10:46:53.147-07:00[America/Phoenix]
+creation_date: 2025-05-01T16:03:03.641-07:00[America/Phoenix]
 operating_system: Windows 11
 mcc_mode: IDE
 mcc_mode_version: v6.25
@@ -18,8 +18,8 @@ device_library: {library_class: com.microchip.mcc.harmony.Harmony3Library, name:
     V3, version: 1.5.4}
 packs: {name: PIC32CX-BZ6_DFP, version: 1.2.17}
 modules:
-- {name: csp, type: HARMONY, version: v3.22.0}
+- {name: csp, type: HARMONY, version: v3.22.2}
 - {name: core, type: HARMONY, version: v3.15.1}
 - {name: CMSIS_5, type: HARMONY, version: 5.9.0}
-- {name: net, type: HARMONY, version: dev_aa}
+- {name: net, type: HARMONY, version: v3.14.0}
 - {name: bsp, type: HARMONY, version: v3.22.0}
